--- a/f3-c3/index.html
+++ b/f3-c3/index.html
@@ -37,6 +37,6 @@
             </form>
         </div>
     </div>
- <script src="/f3-c3/script.js"></script>   
+ <script src="./script.js"></script>   
 </body>
 </html>
